Feat: 해피갤러리 공식 공방 경험 강화
